test/Neg/termina/casting.fin
function f() {

    let foo : bool = true;

    var casting : u32 = foo as u32;

    return;

}
